--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@web3modal/wagmi": "^5.0.3",
     "ethers": "^6.13.1",
     "next": "14.1.3",
+    "next-view-transitions": "^0.3.1",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.72.0",
